src/main/java/com/example/librosapi/error/LibroNoEncontradoException.java
package com.example.librosapi.error;

public class LibroNoEncontradoException extends RuntimeException {
    public LibroNoEncontradoException(Long id) {
        super("Libro no encontrado con id: " + id);
    }
}
